# dcc-controller

./: .gitignore  Cargo.toml
.cargo/: config.toml
controller/: Cargo.toml
controller/src/: main.rs
controller/src/devices/: dcc.rs  pins.rs  types.rs
controller/src/tasks/: display.rs  input.rs  mod.rs  transmit.rs
decoder/: Cargo.toml
decoder/src/: lib.rs  main.rs  pins.rs
decoder/src/tasks/: decode.rs
kicad/: button.kicad_sch  dcc.kicad_pro  dcc.kicad_sch  esp-c3-rx.kicad_sch  esp32-c6.kicad_sch  esp32c3.kicad_sch  inverter.kicad_sch  led.kicad_sch  logic_converter.kicad_sch  motor_controller.kicad_sch  power.kicad_sch  receiver.kicad_sch  rotary_encoder.kicad_sch  screen.kicad_sch  screen_ssd1322.kicad_sch  screen_ssd1331.kicad_sch  transmitter.kicad_sch  untitled.kicad_sch
src/: dcc.rs  devices.rs  main.rs  pins.rs  setup.rs
src/devices/: dcc.rs  mod.rs  pins.rs  types.rs
src/tasks/: display.rs  input.rs  transmit.rs
src/ui/: components.rs  mod.rs
