[package]
name = "dcc-controller"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
critical-section = "1.2.0"
display-interface-spi = "0.5.0"
embassy-embedded-hal = "0.2.0"
embassy-sync = "0.6.1"
embassy-time = { version = "*" }
embedded-graphics = "0.7.1"
embedded-hal = "1.0.0"
fugit = "0.3.7"
rotary-encoder-embedded = "0.3.1"
ssd1331 = "0.3.0"

defmt = "0.3.10"
itoa = "1.0.14"
libm = "0.2.11"

[dependencies.ringbuffer]
version = "0.15.0"
default-features = false

[dependencies.button-driver]
version = "0.2.2"
features = ["embedded_hal", "embassy", "esp"]

[dependencies.embassy-executor]
version = "0.6.3"
features = ["nightly"]

[dependencies.esp-hal-embassy]
version = "*"
features = ["esp32c3", "executors", "integrated-timers"]

[dependencies.esp-hal]
version = "0.22"
features = ["esp32c3"]

[dependencies.esp-backtrace]
version = "*"
features = ["esp32c3", "panic-handler", "exception-handler", "println"]

[dependencies.esp-println]
version = "*"
features = ["esp32c3"]

[dependencies.dcc-rs]
path = "../dcc-rs"
