[package]
name = "controller"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[dependencies]
portable-atomic = { version = "*", features = ["critical-section"] }
critical-section = "1.2.0"
embassy-embedded-hal = "0.2.0"
embassy-sync = "0.6.1"
embassy-time = { version = "*" }
embedded-graphics = "^0.8"
embedded-hal = "1.0.0"
fugit = "0.3.7"
rotary-encoder-embedded = "0.3.1"
ssd1322_rs = { git = "https://github.com/birdistheword96/ssd1322_rs" }

libm = "0.2.11"
kolibri-embedded-gui = { git = "https://github.com/piedoom/kolibri", branch = "restructure" }
static_cell = "2.1.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }

itoa = "1.0.14"
dtoa = "1.0.9"
heapless = { version = "0.8.0" }

[dependencies.ringbuffer]
version = "0.15.0"
default-features = false

[dependencies.button-driver]
version = "0.2.2"
features = ["embedded_hal", "embassy", "esp"]

[dependencies.embassy-executor]
version = "0.6.3"
features = ["nightly"]

[dependencies.esp-hal-embassy]
version = "*"
features = ["esp32c6", "executors", "integrated-timers"]

[dependencies.esp-hal]
version = "0.22"
features = ["esp32c6"]

[dependencies.esp-backtrace]
version = "*"
features = ["esp32c6", "panic-handler", "exception-handler", "println"]

[dependencies.esp-println]
version = "*"
features = ["esp32c6"]

[dependencies.dcc-rs]
path = "../../dcc-rs"
